feat: created exceptions UnauthorizedAccessException and CollectionNotFoundException